fixing scrollbar on message content

--- a/frontend/src/pages/Home/Home.scss
+++ b/frontend/src/pages/Home/Home.scss
@@ -64,6 +64,10 @@
                 margin: 20px 0;
             }
 
+            .loading-container-hidden {
+                margin: 0;
+            }
+
             .bottom-container {
                 bottom: 20px;
                 // position: absolute;
